# syslog-ng

./: azure-pipelines.yml  configure.ac
lib/: Makefile.am  apphook.c  cfg-grammar.y  cfg-parser.c  cfg-tree.c  cfg-tree.h  host-id.c  persist-state.c  persist-state.h
lib/control/: control-commands.c
lib/secret-storage/: Makefile.am  secret-storage.c  secret-storage.h
lib/secret-storage/tests/: CMakeLists.txt  check-secret-core.py  meant_to_be_crashed.c
modules/affile/: affile-source.c  file-reader.c
modules/afsocket/: afsocket-source.c
modules/stardate/tests/: test_stardate.c
modules/systemd-journal/: CMakeLists.txt  Makefile.am  journal-persistable.h  journal-reader.c  systemd-journal-plugin.c
persist-tool/: dump.c  dump.h  persist-tool.c
syslog-ng-ctl/: syslog-ng-ctl.c
